2004-01-20  Ravindra  <rkumar@novell.com>

	* Pen.cs: Fixed bug #52811 in Pen.Transform property. Setting
	this property was hanging and getting was throwing a NullRef
	Exception. Earlier we were passing Matrix object to and fro
	which was causing the problem. Now, we are using IntPtr.
	Thanks to Duncan for helping me.
	Also, .NET behavior is to maintain Pen.Color and Pen.Brush
	together. If color is set, a SolidBrush automatically gets
	set with the same color, Pen loses the old brush object.
	If a SolidBrush is set, Pen.Color gets the value same as that
	of brush color losing the old value. Pen shows this behavior
	now.
	* gdipFunctions.cs: Changed the signature of GdipGetPenTransform
	and GdipSetPenTransform methods to use IntPtr instead of Matrix.

2004-01-19  Duncan Mak  <duncan@ximian.com>

	* gdipFunctions.cs: Import functions for GraphicsPath.

2004-01-14  Ravindra <rkumar@novell.com>
                                                                                
        * SolidBrush.cs: Made SolidBrush to initialize its color
	from IntPtr.
                                                                                
        * gdipFunctions.cs: Added call to GdipGetSolidFillColor GDI+ API.

2004-01-11  Duncan Mak  <duncan@ximian.com>

	* Bitmap.cs (LockBits): 
	* Graphics.cs (DrawString): Removed reference to GpRectF.

2004-01-09  Duncan Mak  <duncan@ximian.com>

	* gdipStructs.cs (GpRectF, GpRect, GpPointF, GpPoint):
	Removed. Didn't know that structs are laid out sequentially by
	default. We don't need these anymore.

2004-01-12 Ben Maurer  <bmaurer@users.sourceforge.net>

	* Color.cs: Keep KnownColors in an array so that we avoid ht lookup.

2004-01-11  Daniel Morgan <danielmorgan@verizon.net>

	* Graphics.cs: fix compile error on Windows builds for out 
	parameter state	in call to GdipSaveGraphics

2004-01-10  Ravindra  <rkumar@novell.com>

	* All Enums: Made serializable.

	* Image.cs: Corrected signature of Dispose(bool) method.
